<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/restaurantDetailsScrollView"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_marginTop="40dp"
    android:background="@color/windowBackground"
    android:clipToPadding="false"
    android:paddingBottom="120dp">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/windowBackground"
        android:padding="20dp">


        <TextView
            android:id="@+id/userEmailTvEditModeTv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_marginTop="24dp"
            android:text="@string/edit_mode"
            android:textAllCaps="true"
            android:textColor="@color/redWithAlpha"
            android:textStyle="bold"
            android:visibility="gone"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:visibility="visible" />

        <androidx.appcompat.widget.AppCompatImageView
            android:id="@+id/deleteUserTv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="12dp"
            android:layout_marginEnd="20dp"
            android:padding="12dp"
            android:src="@drawable/ic_baseline_delete_24"
            android:visibility="gone"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:tint="@color/redWithAlpha"
            tools:visibility="visible" />


        <TextView
            android:id="@+id/userDetailsTv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_marginTop="24dp"
            android:text="@string/user_details_indication"
            android:textAllCaps="true"
            android:textColor="@color/lightText1"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/userEmailTvEditModeTv" />

        <EditText
            android:id="@+id/userNameTv"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginTop="8dp"
            android:background="@color/itemBackground"
            android:elevation="4dp"
            android:hint="@string/restaurant_name"
            android:inputType="textCapSentences"
            android:maxLength="100"
            android:paddingStart="24dp"
            android:textSize="16sp"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/userDetailsTv"
            tools:ignore="RtlSymmetry" />


        <EditText
            android:id="@+id/userEmailTv"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginTop="8dp"
            android:background="@color/itemBackground"
            android:elevation="4dp"
            android:hint="@string/email"
            android:inputType="textEmailAddress"
            android:maxLength="100"
            android:paddingStart="24dp"
            android:textSize="16sp"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/userNameTv"
            tools:ignore="RtlSymmetry" />


        <EditText
            android:id="@+id/userPasswordTv"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginTop="8dp"
            android:background="@color/itemBackground"
            android:elevation="4dp"
            android:hint="@string/password"
            android:inputType="textPassword"
            android:maxLength="100"
            android:paddingStart="24dp"
            android:textSize="16sp"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/userEmailTv"
            tools:ignore="RtlSymmetry" />

        <LinearLayout
            android:id="@+id/userRoleContainer"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:layout_marginTop="12dp"
            android:orientation="horizontal"
            android:paddingBottom="12dp"
            android:spinnerMode="dropdown"
            app:layout_constraintTop_toBottomOf="@id/userPasswordTv">

            <TextView
                android:id="@+id/regularUserTv"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:background="@drawable/rectangle_round_corners_primary_color"
                android:gravity="center"
                android:text="@string/regular"
                android:textColor="@android:color/white" />

            <TextView
                android:id="@+id/ownerUserTv"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_marginStart="8dp"
                android:layout_marginEnd="8dp"
                android:layout_weight="1"
                android:background="@drawable/rectangle_round_corners_gray_color"
                android:gravity="center"
                android:text="@string/owner"
                android:textColor="@android:color/white" />

            <TextView
                android:id="@+id/adminUserTv"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:background="@drawable/rectangle_round_corners_gray_color"
                android:gravity="center"
                android:text="@string/admin"
                android:textColor="@android:color/white" />

        </LinearLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>