<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/restaurantDetailsScrollView"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_marginTop="40dp"
    android:clipToPadding="false"
    android:fillViewport="true"
    android:paddingBottom="40dp">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/windowBackground"
        android:padding="20dp">


        <TextView
            android:id="@+id/restaurantEditModeTv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_marginTop="24dp"
            android:text="@string/edit_mode"
            android:textAllCaps="true"
            android:textColor="@color/redWithAlpha"
            android:textStyle="bold"
            android:visibility="gone"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:visibility="visible" />

        <androidx.appcompat.widget.AppCompatImageView
            android:id="@+id/deleteRestaurantIv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="12dp"
            android:layout_marginEnd="20dp"
            android:padding="12dp"
            android:src="@drawable/ic_baseline_delete_24"
            android:visibility="gone"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:tint="@color/redWithAlpha"
            tools:visibility="visible" />


        <TextView
            android:id="@+id/reviewDetailsTv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_marginTop="24dp"
            android:text="@string/restaurant_details_indication"
            android:textAllCaps="true"
            android:textColor="@color/lightText1"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/restaurantEditModeTv" />

        <EditText
            android:id="@+id/restaurantNameTv"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginTop="8dp"
            android:background="@color/itemBackground"
            android:elevation="4dp"
            android:hint="@string/restaurant_name"
            android:inputType="textCapSentences"
            android:maxLength="100"
            android:paddingStart="24dp"
            android:textSize="16sp"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/reviewDetailsTv" />


        <EditText
            android:id="@+id/restaurantAddressTv"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginTop="8dp"
            android:background="@color/itemBackground"
            android:elevation="4dp"
            android:hint="@string/restaurant_address"
            android:inputType="textCapSentences"
            android:maxLength="100"
            android:paddingStart="24dp"
            android:textSize="16sp"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/restaurantNameTv" />


        <EditText
            android:id="@+id/restaurantOwnerEmailAddressTv"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginTop="8dp"
            android:background="@color/itemBackground"
            android:elevation="4dp"
            android:hint="@string/owner_email_address"
            android:inputType="textCapSentences"
            android:maxLength="100"
            android:paddingStart="24dp"
            android:textSize="16sp"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/restaurantAddressTv" />


        <EditText
            android:id="@+id/restaurantPhoneNumberTv"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginTop="8dp"
            android:background="@color/itemBackground"
            android:elevation="4dp"
            android:hint="@string/restaurant_phone_number"
            android:inputType="phone"
            android:maxLength="100"
            android:paddingStart="24dp"
            android:textSize="16sp"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/restaurantOwnerEmailAddressTv" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>